More corrections at extensions cards alignment css

--- a/src/resources/css/extensions.css
+++ b/src/resources/css/extensions.css
@@ -10,6 +10,7 @@
   gap: 3vw;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
 
 .card {
@@ -20,7 +21,7 @@
 }
 
 .browserLogo {
-  margin-top: 7vw;
+  margin-top: 7vh;
   height: auto;
   max-width: 50vw;
 }
